test/corpus/function/basic.txt
================================================================================
Test
================================================================================

fn do_nothing() {
  return 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (compound_statement
      (return_statement
        (const_literal
          (int_literal))))))
