test/corpus/function/no_return.txt
================================================================================
Test
================================================================================

fn do_nothing() {

}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (compound_statement)))
