test/corpus/function/non_latin_symbols.txt
================================================================================
Test
================================================================================
fn Δέλτα() {
  return 1;
}
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (compound_statement
      (return_statement
        (const_literal
          (int_literal))))))
